trunk/Archive2/da/ca4a7b7d8ef906/output
g++ (GCC) 5.2.0
Copyright (C) 2015 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

.............
main.cpp: In member function 'void Derive<X>::bar()':
main.cpp:10:22: error: there are no arguments to 'foo' that depend on a template parameter, so a declaration of 'foo' must be available [-fpermissive]
     void bar() { foo(); }
                      ^
main.cpp:10:22: note: (if you use '-fpermissive', G++ will accept your code, but allowing the use of an undeclared name is deprecated)
............
clang version 3.6.0 (tags/RELEASE_360/final 235480)
Target: x86_64-unknown-linux-gnu
Thread model: posix
.............
main.cpp:10:18: error: use of undeclared identifier 'foo'
    void bar() { foo(); }
                 ^
1 error generated.
